实现邮件模板发送的方式
